--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -38,7 +38,7 @@ footer .container {
 .footer-block__item:not(:last-child) {
   margin-right: 31px;
 }
-.socials .container {
+.socials {
   display: flex;
 
   margin-top: 100px;
