--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,10 +1,10 @@
-footer .container {
-  display: flex;
-  justify-content: space-between;
-  justify-content: center;
+// footer .container {
+//   display: flex;
+//   justify-content: space-between;
+//   justify-content: center;
 
-  padding: 0 34px 0 80px;
-}
+//   padding: 0 34px 0 80px;
+// }
 .footer-block {
   display: flex;
   justify-content: center;
