--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,25 +1,12 @@
-// footer .container {
-//   display: flex;
-//   justify-content: space-between;
-//   justify-content: center;
-
-//   padding: 0 34px 0 80px;
-// }
 .footer-block {
   display: flex;
   justify-content: center;
   width: 100%;
-  border-bottom: 2px solid $pramery-site-color;
-  margin-bottom: 50px;
-}
-.footer-block__box {
-  display: inline-flex;
-}
-.footer-block__thumb {
-  display: inline-flex;
+  border-bottom: 1px solid $pramery-site-color;
+  padding-bottom: 43px;
 }
 .footer-block__list {
-  display: inline-flex;
+  display: flex;
 }
 .footer-block__link {
   font-weight: 700;
@@ -30,26 +17,21 @@
 }
 .logo--current {
   text-decoration: none;
-  font-family: "Homemade Apple";
-  color: #f7941e;
+  font-family: $second-font;
+  color: $secondary-site-color;
   margin-left: 141px;
   margin-right: 141px;
 }
 .footer-block__item:not(:last-child) {
-  margin-right: 31px;
+  margin-right: 26px;
 }
 .socials {
   display: flex;
   justify-content: center;
-
-  margin-top: 50px;
   margin-bottom: 72px;
 }
 .social-follow {
-  display: inline-flex;
-  justify-content: center;
-  justify-content: space-between;
-
+  display: flex;
   margin-top: 55px;
 }
 .social-follow li:not(:last-child) {
@@ -59,17 +41,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
   width: 38px;
   height: 38px;
-
   border-radius: 50%;
-
-  background-color: $pramery-site-color;
-
+  color: $pramery-site-color;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  .social-follow__icon {
-    fill: $third-site-color;
-  }
+}
+.social-follow__icon svg {
+  fill: $third-site-color;
+}
+.copyright {
+  margin-bottom: 50px;
+}
+.copyright__text {
+  text-align: center;
 }
