--- a/sass/components/_gifts.scss
+++ b/sass/components/_gifts.scss
@@ -24,11 +24,11 @@
 }
 
 .gifts-list__item {
-  background-color: #fafafa;
+  background-color: $third-bg-color;
 }
 
 .gifts-list__item:hover {
-  background-color: #ffffff;
+  background-color: $third-bg-color;
   filter: drop-shadow(10px 10px 15px rgba(0, 0, 0, 0.05));
 }
 
@@ -45,7 +45,13 @@
   line-height: 1.2;
   margin-bottom: 74px;
 }
-
+.link {
+  font-family: $pramery-font;
+  font-size: 14px;
+  line-height: 1.2;
+  color: $pramery-site-color;
+  text-decoration: none;
+}
 .reference__container {
   display: flex;
   align-items: center;
@@ -53,7 +59,7 @@
   padding-bottom: 69px;
   padding-left: 235px;
   padding-right: 235px;
-  background-color: orange;
+  background-color: $secondary-site-color;
 }
 
 .reference__button {
@@ -64,8 +70,8 @@
 
   text-transform: uppercase;
 
-  color: white;
-  background-color: black;
+  color: $third-site-color;
+  background-color: $pramery-site-color;
   border-radius: 5px;
   transition: box-shadow 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -78,10 +84,10 @@
 
   text-transform: uppercase;
 
-  color: black;
-  background-color: orange;
+  color: $pramery-site-color;
+  background-color: $secondary-site-color;
   border-radius: 5px;
-  border: 1px solid black;
+  border: 1px solid $pramery-site-color;
   transition: box-shadow 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
