--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -8,10 +8,6 @@ header .container {
 .nav-list {
   display: flex;
   justify-content: space-between;
-  // padding-top: 47px;
-  // padding-bottom: 47px;
-  // padding-left: 0;
-  // left: 433px;
 }
 
 .nav-list__item {
@@ -60,8 +56,8 @@ header .container {
   line-height: 1.2;
   padding: 14px 24px 8px 24px;
   text-transform: uppercase;
-  color: #f7941e;
-  background-color: #ffffff;
-  border: 1px solid #f7941e;
+  color: $secondary-site-color;
+  background-color: $primary-bg-color;
+  border: 1px solid $secondary-site-color;
   border-radius: 5px;
 }
